--- a/logistic-api/src/main/resources/messages.properties
+++ b/logistic-api/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 NotBlank=This field is mandatory
+NotNull=This field is mandatory
 Size=It must have a minimum of {2} and a maximum of {1} characters.
 Email=It must be a valid email
